- NEW: Showing the log messages between two tags. See issue #111. (Stefan)
- NEW: The "Create Patch" feature now allows to select which changes to
       include in the generated patchfile. See issue #135. (Stefan)
- NEW: Right-dragging in the repository browser allows to rename the file
       or folder with the move/copy. (Stefan)
- CHG: Setup UI changed from the dark'd code from the VS-generated package
       to a standardised framework from the WiX tutorial. 
       See issue #147. (Pete)
- CHG: Refactored WiX setup code into fragments and started to use include
       files for variables that are needed more than once. 
       See issues #127 and #128. (Pete)
- CHG: The spellchecker now checks text pasted in the edit control
       immediately, without the need to enter text manually first.
       See issue #116. (Stefan)
- CHG: In the log dialog, the "next 100" button is disabled once the
       "Show All" button was pressed. See issue #138. (Stefan)
- CHG: Enabled diffing of copied/moved files in the commit dialog. (Stefan)
- CHG: In the property dialog, the svn: properties which can only be set on
       files are now shown on folders too in the combobox. An error message
       is then shown if the user tries to set such a property on the folder
       without the 'recursive' checkbox activated. (Stefan)
- BUG: The default ssh client (TortoisePlink) wasn't used in some
       places, e.g. the revision graph. (Stefan)
- BUG: The option "Only use spellchecker when tsvn:projectlanguage is set"
       was inversed. (Stefan)
- BUG: The bugtraq: and tsvn: property values weren't correctly handled if
       they contained non-ASCII chars. (Stefan)
- BUG: Comparing two files from the revision graph didn't work. (Stefan)
- BUG: When adding a folder, nested folders were shown as unversioned
       and checked to add. (Stefan)
- BUG: The same line was shown twice in TortoiseMerge if 'ignore leading
       whitespace' option was turned on and the line differed only